--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "devDependencies": {
     "angular": "~1.4.6",
-    "angular-route": "~1.4.6"
+    "angular-route": "~1.4.6",
+    "angular-animate": "~1.4.6"
   }
 }
